@@ -29,6 +29,7 @@
           This change is done to prevent issues with empty select when an enumerator is not correctly configured.
         # Fix an issue when an event 'end' is null during drag-n-drop (allday events).
         # Fix calendar eventTimeFormat & slotLabelFormat issues : 24h rendered as 12h, wrong datetime or date ranges.
+        # Fix creme.utils.ajaxQuery unexpected error when the query returns a 'Connection Error' without data
 
 
 == Version 2.6.10 ==
